--- a/src/Components/CardItem/CardItem.scss
+++ b/src/Components/CardItem/CardItem.scss
@@ -1,4 +1,4 @@
-swiper {
+.swiper {
     width: 100%;
     height: 100%;
 }
@@ -26,6 +26,7 @@ swiper {
     &:hover~.swiper-button-prev {
         opacity: 1;
     }
+
     &:hover~.swiper-button-next {
         opacity: 1;
     }
@@ -41,10 +42,10 @@ swiper {
 .swiper-button-prev {
     background-color: white;
     opacity: 0;
-    color: black!important;
+    color: black !important;
     padding: 0;
-    width: 36px!important;
-    height: 36px!important;
+    width: 36px !important;
+    height: 36px !important;
     border-radius: 2rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     transition: all 0.3s ease-in-out;
@@ -52,15 +53,15 @@ swiper {
 
 .swiper-button-next {
     background-color: white;
-    color: black!important;
+    color: black !important;
     opacity: 0;
     padding: 0;
-    width: 36px!important;
-    height: 36px!important;
+    width: 36px !important;
+    height: 36px !important;
     border-radius: 2rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     transition: all 0.3s ease-in-out;
-    border: none!important
+    border: none !important
 }
 
 .swiper-button-prev.swiper-button-disabled {
@@ -69,15 +70,16 @@ swiper {
 
 .swiper-pagination {
     margin-bottom: 10px;
+
     // opacity: 1;
     .swiper-pagination-bullet {
-        height: 6px!important;
-        width: 6px!important;
+        height: 6px !important;
+        width: 6px !important;
     }
 }
 
 .swiper-pagination-bullet-active {
-    background-color: white!important;
+    background-color: white !important;
 }
 
 .swiper-button-next {
@@ -88,18 +90,20 @@ swiper {
 
 .swiper-button-prev {
     &:hover {
-        opacity: 1!important;
+        opacity: 1 !important;
     }
 }
 
 .swiper-button-next:after {
-    font-size: 10px!important
+    font-size: 10px !important
 }
 
 .swiper-button-prev:after {
-    font-size: 10px!important
+    font-size: 10px !important
 }
-.ant-image, .ant-image-img{
+
+.ant-image,
+.ant-image-img {
     height: 100% !important;
     width: 100% !important;
 }
